--- a/dataStructure/stack/visualStackQueue.html
+++ b/dataStructure/stack/visualStackQueue.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Stack using Array</title>
+    <title>Stack Finale using Array</title>
 
     <link rel="stylesheet" href="/dataStructure/stack/style.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,6 +15,40 @@
 
             font-family: 'IBM Plex Mono', monospace;
         }
+
+    </style>
+    <style>
+        .tutorial-container {
+            display: none;
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            z-index: 2;
+            background: rgba(0, 0, 0, 0.8);
+
+
+        }
+        .tutorial {
+
+            font-family: 'Baloo 2', cursive;
+            font-size: 1.5rem;
+            color: black;
+            text-align: center;
+            position: fixed;
+            z-index: 4555;
+
+            width: 70%;
+            height: 80%;
+            top: 10%;
+            left: 15%;
+            background: white;
+            display: block;
+            border: 2px solid teal;
+            border-radius: 10px;
+
+        }
+
 
     </style>
     <link
@@ -40,6 +74,53 @@
         </div>
     </div>
 </nav>
+ <!-- Algorithm Tut -->
+    <div class="tutorial-container" id="tutorial">
+      <div class="tutorial">
+        <div
+          id="tutorial-title"
+          class="tutorial-header mt-8 py-8 text-teal-500 text-6xl font-bold"
+        ></div>
+        <div class="tutorial-body p-4 text-2xl space-y-4">
+          <div id="tutorial-body"></div>
+
+          <div class="flex items-center justify-center">
+            <img
+              id="tutorial-image"
+              class="pt-4"
+              src="../Images/bar.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div
+          class="tutorial-footer absolute bottom-0 p-3 flex justify-between w-full"
+        >
+          <button
+            id="tutorial-skip"
+            class="button bg-teal-500 px-2 hover:bg-green-400 text-white"
+          >
+            Skip Tutorial
+          </button>
+          <div>
+            <button
+              id="tutorial-prev"
+              data-val="0"
+              class="button bg-teal-500 px-2 hover:bg-green-400 text-white"
+            >
+              Prev
+            </button>
+            <button
+              data-val="2"
+              class="button bg-teal-500 px-2 hover:bg-green-400 text-white"
+              id="tutorial-next"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <!-- Wrapper for whole HTML document -->
 <div id="container" class="container mx-auto" style="margin-top: 60px; margin-right: 7%;">
@@ -232,5 +313,26 @@
 <script src="../stack/container.js"></script>
 <script src="../stack/operationExplaination.js"></script>
 <script src="../stack/stack.js"></script>
+<!-- Tutorial Modal JS -->
+<script type="module">
+    import Tutorial from "../../js/sort/tutorial.js";
+    $(document).ready(function () {
+        var tutorial = new Tutorial("");
+        tutorial.setTutorial(1,"stackArray");
+        tutorial.show();
+        $("#tutorial-next").click(function () {
+                tutorial.setTutorial(document.getElementById("tutorial-next").dataset.val,"stackArray");
+            }
+        );
+        $("#tutorial-prev").click(function () {
+                tutorial.setTutorial(document.getElementById("tutorial-prev").dataset.val,"stackArray");
+            }
+        );
+        $("#tutorial-skip").click(function () {
+                tutorial.hide();
+            }
+        );
+    });
+</script>
 </body>
 </html>
