--- a/graph/index.html
+++ b/graph/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graph</title>
+    <title>Path Finding</title>
     <link rel="stylesheet" href="/CSS/sort.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
