Tutorial Js Added

--- a/graph/index.html
+++ b/graph/index.html
@@ -181,7 +181,7 @@
 
                     </p>
                 </div>
-                <div class="intro-y px-4 my-3  py-4 text-xl font-medium">
+                <div class="intro-y px-4 my-3 px-4  py-4 text-xl font-medium">
                     <h2>Description</h2>
                     <p class="text-sm font-thin" id="algorithm-description">
 
