Tutorial Js Added

--- a/graph/index.html
+++ b/graph/index.html
@@ -27,6 +27,13 @@
             text-align: center;
             align-items: center;
             justify-content: center;
+            font-size: 1.7rem;
+
+
+        }
+        .cell{
+            cursor: pointer;
+
 
         }
         .start {
