Tutorial Js Added

--- a/graph_new.html
+++ b/graph_new.html
@@ -16,7 +16,7 @@
       border-radius: 6px;
     }
   </style>
-  <link rel="stylesheet" href="/CSS/sort.css" />
+  <link rel="stylesheet" href="./CSS/sort.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
@@ -117,7 +117,7 @@
         <img
                 id="tutorial-image"
                 class="pt-4"
-                src="../Images/graphNode/gnc.png"
+                src=""
                 alt=""
         />
       </div>
@@ -285,7 +285,7 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
         crossorigin="anonymous"
 ></script>
-<script type="text/javascript" src="./js/grid.js"></script>
+
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <script
         src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.js"
@@ -293,16 +293,13 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
 ></script>
-<script type="text/javascript" src="/graph/js/helper.js"></script>
-<script
-        type="text/javascript"
-        src="../graph/js/graphAlgorithmDetails.js"
-></script>
-<script type="text/javascript" src="../js/buildGraph.js"></script>
-<script type="text/javascript" src="../js/visualizeGraphAlog.js"></script>
+<script type="text/javascript" src="./js/graph/helper.js"></script>
+
+<script type="text/javascript" src="./js/graph/buildGraph.js"></script>
+<script type="text/javascript" src="./js/graph/visualizeGraphAlog.js"></script>
 <script type="module">
 
-  import sortingAlgorithmDetails from "../js/sort/sortingAlgorithmDetails.js"
+  import sortingAlgorithmDetails from "./js/sortingAlgorithmDetails.js"
   $("#selectAlgorithm").on("change", function () {
     let algorithm = $(this).val();
     let selectedAlgorithm = new sortingAlgorithmDetails(algorithm);
@@ -480,7 +477,7 @@
   visDfs.init(container, graph.getGraph(), options);
 
   var editor = ace.edit("editor");
-  editor.setTheme("ace/theme/light");
+ // editor.setTheme("ace/theme/monokai");
   //   editor.session.setMode("ace/mode/algorithm");
   document.getElementById("editor").style.fontSize = "19px";
   editor.setOptions({
@@ -635,7 +632,7 @@
 
 <!-- Tutorial Modal JS -->
 <script type="module">
-  import Tutorial from "../../js/sort/tutorial.js";
+  import Tutorial from "./js/tutorial.js";
   $(document).ready(function () {
     var tutorial = new Tutorial("");
     tutorial.setTutorial(1, "graph");
