--- a/sort.html
+++ b/sort.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting</title>
-    <link rel="stylesheet" href="../CSS/sort.css">
+    <link rel="stylesheet" href="CSS/sort.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
@@ -307,12 +307,14 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<script src="js/tutorial.js"></script>
+<script src="js/sortingAlgorithmDetails.js"></script>
+<script src="js/sort/bar.js"></script>
+<script src="js/sort/explaination.js"></script>
+<script src="js/sort/sort.js"></script>
 
+<script >
 
-<script type="module">
-    import Sort from "../js/sort/sort.js"
-    import sortingAlgorithmDetails from "../js/sort/sortingAlgorithmDetails.js"
-    import Tutorial from "../js/sort/tutorial.js"
 
     $(document).ready(function (show) {
 
