--- a/sort.html
+++ b/sort.html
@@ -163,7 +163,7 @@
     <div class="mx-auto container">
         <div class="flex justify-between items-center px-4 py-2">
             <div class="flex items-center">
-                <a href="../"><h1 class=" font-bold text-2xl ml-2">AlgorithmDaVisualizer</h1></a>
+                <a href="index.html"><h1 class="font-bold text-2xl ml-2">ProjectDaVisualizer</h1></a>
             </div>
             <div class="flex items-center space-x-2 ">
                 <div class="font-bold text-lg">
