--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <header class="container-fluid vs-container" id="header">
@@ -93,26 +93,23 @@
             <button type="button" class="control" data-filter=".data-structure">
               Data Structure
             </button>
-            <button type="button" class="control" data-filter=".geometry">
-              Geometry
-            </button>
           </div>
         </div>
 
         <div class="row">
           <div class="fw mix-container home-main">
             <div class="mix sorting">
-              <a href="/sort/index.html" class="thumb-a">
+              <a href="sort.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Insertion Sorting Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="./Images/sortingAlgorithm/insertionSort.jpg" alt="Insertion Sort" />
+                  <img src="Images/sortingAlgorithm/insertionSort.jpg" alt="Insertion Sort" />
                 </div>
               </a>
             </div>
             <div class="mix sorting">
-              <a href="/Algorithm-visualization/selection.html" class="thumb-a">
+              <a href="sort.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Selection Sorting Algorithm</h3></div>
                 </div>
@@ -121,8 +118,8 @@
                 </div>
               </a>
             </div>
-           <!-- <div class="mix sorting">
-              <a href="./Selection/Selection.html" class="thumb-a">
+           <div class="mix sorting">
+              <a href="sort.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Merge Sort Algorithm</h3></div>
                 </div>
@@ -130,7 +127,7 @@
                   <img src="../Images/sortingAlgorithm//mergeSort.jpg" alt="" />
                 </div>
               </a>
-            </div>-->
+            </div>
          <!--   <div class="mix sorting">
               <a href="./Selection/Selection.html" class="thumb-a">
                 <div class="item-hover">
@@ -142,7 +139,7 @@
               </a>
             </div>-->
             <div class="mix sorting">
-              <a href="./Selection/Selection.html" class="thumb-a">
+              <a href="sort.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Bubble Sort Algorithm</h3></div>
                 </div>
@@ -152,7 +149,7 @@
               </a>
             </div>
             <div class="mix data-structure">
-              <a href="#" class="thumb-a">
+              <a href="stack.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Stack Algorithm</h3></div>
                 </div>
@@ -161,20 +158,10 @@
                 </div>
               </a>
             </div>
-            <div class="mix data-structure">
-              <a href="#" class="thumb-a">
-                <div class="item-hover">
-                  <div class="hover-text"><h3>Qeue Algorithm</h3></div>
-                </div>
-                <div class="item-img">
-                  <img src="./Images/dataStructure/queue.jpg" alt="" />
-                </div>
-              </a>
-            </div>
             <div class="mix graph-travarsal">
-              <a href="#" class="thumb-a">
+              <a href="graph.html" class="thumb-a">
                 <div class="item-hover">
-                  <div class="hover-text"><h3>Bfs</h3></div>
+                  <div class="hover-text"><h3>BFS</h3></div>
                 </div>
                 <div class="item-img">
                   <img src="./Images/graphtravarsal/bfs.png" alt="" />
@@ -182,9 +169,9 @@
               </a>
             </div>
             <div class="mix graph-travarsal">
-              <a href="#" class="thumb-a">
+              <a href="graph.html" class="thumb-a">
                 <div class="item-hover">
-                  <div class="hover-text"><h3>Dfs</h3></div>
+                  <div class="hover-text"><h3>DFS</h3></div>
                 </div>
                 <div class="item-img">
                   <img src="./Images/graphtravarsal/dfs.jpg" alt="" />
@@ -192,22 +179,12 @@
               </a>
             </div>
             <div class="mix path-finding">
-              <a href="#" class="thumb-a">
+              <a href="pathfinder.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Shortest Path algorithm</h3></div>
                 </div>
                 <div class="item-img">
                   <img src="./Images/pathfinding/sssp.png" alt="" />
-                </div>
-              </a>
-            </div>
-            <div class="mix geometry">
-              <a href="#" class="thumb-a">
-                <div class="item-hover">
-                  <div class="hover-text"><h3>convex hall</h3></div>
-                </div>
-                <div class="item-img">
-                  <img src="./Images/graphtravarsal/dfs.jpg" alt="" />
                 </div>
               </a>
             </div>
