--- a/pathfinder.html
+++ b/pathfinder.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Path Finding</title>
-    <link rel="stylesheet" href="/CSS/sort.css" />
+    <link rel="stylesheet" href="CSS/sort.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
@@ -112,7 +112,7 @@
             </div>
 
             <div class=" flex items-center justify-center">
-                <img id="tutorial-image" class="pt-4" src="../Images/bar.png" alt="">
+                <img id="tutorial-image" class="pt-4" src="" alt="">
             </div>
 
         </div>
@@ -137,7 +137,7 @@
     <div class="mx-auto container">
         <div class="flex justify-between items-center px-4 py-2">
             <div class="flex items-center">
-                <a href="../index.html"><h1 class="font-bold text-2xl ml-2">VisualAlgorithm</h1></a>
+                <a href="index.html"><h1 class="font-bold text-2xl ml-2">ProjectDaVisualizer</h1></a>
             </div>
             <div class="flex items-center space-x-2">
                 <div class="font-bold text-lg">
