File Structure changed

--- a/sort.html
+++ b/sort.html
@@ -264,9 +264,9 @@
 </div>
 
 <!-- Algorithm Details -->
-<div id="algorithmDetails" class="details hidden shadow bg-white p-4 mx-auto ">
+<div id="algorithmDetails" class="details  shadow bg-white p-4 mx-auto ">
     <div class="intro-y px-4 my-3 bg-green-500 py-4 text-3xl font-bold">
-        <h2 id="algorithm-title">Bubble Sort</h2>
+        <h2 id="algorithm-title">Sorting Algorithm</h2>
     </div>
     <div class="grid grid-cols-12 space-x-2">
         <div class="col-span-8 bg-gray-100">
