File Structure changed

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <body>
     <header class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="home.html">ProjectDaVisualizer</a>
+        <a class="navbar-brand" href="index.html">ProjectDaVisualizer</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -96,7 +96,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="./Images/aboutUs/joy.jpg"
+                  src="Images/aboutUs/joy.jpg"
                   loading="lazy"
                   width="640"
                   height="805"
@@ -115,7 +115,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="./Images/aboutUs/Mazharul.jpg"
+                  src="Images/aboutUs/Mazharul.jpg"
                   alt="joy picture"
                   loading="lazy"
                   width="640"
@@ -137,7 +137,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="./Images/aboutus/Somapti.jpg"
+                  src="Images/aboutus/Somapti.jpg"
                   alt="joy picture"
                   loading="lazy"
                   width="640"
