--- a/graph.html
+++ b/graph.html
@@ -10,10 +10,11 @@
   <style type="text/css">
     #container {
       margin: 0 auto;
-      width: 80%;
+      width: 90%;
       height: 600px;
       border: 1px solid lightgray;
       border-radius: 6px;
+      background: white;
     }
   </style>
   <link rel="stylesheet" href="./CSS/sort.css" />
@@ -102,7 +103,7 @@
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 
-<body>
+<body >
 <!-- Algorithm Tut -->
 <div class="tutorial-container" id="tutorial">
   <div class="tutorial">
@@ -199,22 +200,24 @@
     </div>
   </div>
 </nav>
-<div class="shadow grid grid-cols-12 space-x-2">
-  <div class="col-span-2" style="margin-left: 100px">
+<div class=" container   mx-auto grid grid-cols-12 space-x-2 mt-8">
+  <div class="col-span-2 p-3 space-y-2 shadow-md border rounded-md p-7  border-3 " >
     <!-- Take Graph  Input and generate from Here -->
-    <div>
-      <input type="checkbox" name="" id="isDirected" value="" />
-      <label for="isDirected"> Directed Graph </label>
-    </div>
-    <div>
-      <input type="checkbox" name="" id="isWeighted" value="" />
-      <label for="isWeighted"> Weighted Graph </label>
-    </div>
+
+   <div class="flex  space-x-2">
+     <div>
+       <input type="checkbox" checked name="" id="isDirected" value="" />
+       <label for="isDirected"> Directed </label>
+     </div>
+     <div>
+       <input type="checkbox"  checked name="" id="isWeighted" value="" />
+       <label for="isWeighted"> Weighted </label>
+     </div>
+   </div>
     <div><strong>Node Count :</strong> <span id="nodeCount">5</span></div>
-    Graph Data :
-    <div
-            class="bg-white border border-gray-400 rounded-lg shadow-md px-4 py-2"
-    >
+
+    <div>
+      <label for="editor" class="py-2 font-bold ">Graph Data:</label>
       <div id="editor"></div>
     </div>
   </div>
@@ -448,6 +451,12 @@
   grid["3"] = [[4, 2]];
   grid["4"] = [[5, 2]];
   grid["5"] = [];
+  let graphNodeTextFirstInit="1 2 10\n" +
+          "1 3 5\n" +
+          "2 4 3\n" +
+          "2 5 3\n" +
+            "3 4 2\n" +
+          "4 5 2\n" ;
 
   const setSourceOption = (nodes, selectElement, optionText) => {
     let option = '<option value="">' + optionText + "</option>";
@@ -479,6 +488,8 @@
   visDfs.init(container, graph.getGraph(), options);
 
   var editor = ace.edit("editor");
+
+  editor.getSession().setValue(graphNodeTextFirstInit);
  // editor.setTheme("ace/theme/monokai");
   //   editor.session.setMode("ace/mode/algorithm");
   document.getElementById("editor").style.fontSize = "19px";
