File Structure changed

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <header class="container-fluid">
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarDefault">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="home.html">HOME </a>
+              <a class="nav-link" href="index.html">HOME </a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="about.html"
@@ -104,7 +104,7 @@
                 />
               </div>
               <div class="text-center">
-                <h5 class="text-xl text-gray-800 font-semibold">Joy Sarkar</h5>
+                <h5 class="text-xl text-gray-800 font-semibold">Joy Sarker</h5>
               </div>
               <a href="#" class="block w-max mx-auto text-center text-black-500"
                 >view bio</a
