--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <div class="hover-text"><h3>Merge Sort Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/sortingAlgorithm//mergeSort.jpg" alt="" />
+                  <img src="./Images/merge (2).webp" alt="" />
                 </div>
               </a>
             </div>
@@ -155,6 +155,16 @@
                 </div>
                 <div class="item-img">
                   <img src="./Images/dataStructure/stackd.jpeg" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix data-structure">
+              <a href="expresstion.html" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Expression tree</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="./Images/expressionTree/expimage.jpg" alt="" />
                 </div>
               </a>
             </div>
