File Structure changed

--- a/sort.html
+++ b/sort.html
@@ -159,11 +159,11 @@
     </div>
 </div>
 
-<nav class=" shadow bg-white">
+<nav class=" shadow bg-white py-3">
     <div class="mx-auto container">
         <div class="flex justify-between items-center px-4 py-2">
             <div class="flex items-center">
-                <a href="index.html"><h1 class="font-bold text-2xl ml-2">ProjectDaVisualizer</h1></a>
+                <a href="index.html"><h1 class="font-black text-4xl ml-2">Project<span class="text-green-500">Da</span>Visualizer</h1></a>
             </div>
             <div class="flex items-center space-x-2 ">
                 <div class="font-bold text-lg">
@@ -208,12 +208,15 @@
 </nav>
 <div class="top-bar shadow mt-2 bg-white">
     <div class="array-container container mx-auto flex space-x-3 items-center font-mono">
-        <label for="array-input" class="font-bold text-xl">Array</label>
 
-        <input id="array-input" type="text" class="w-full text-lg bg-gray-100  p-3" value="">
+            <label for="array-input" class="font-bold text-xl">Array</label>
 
-        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg" id="generateBar">
-            Generate Bar
+            <input id="array-input" type="text" class="w-full text-lg bg-gray-100  p-3" value="">
+
+
+
+        <button style="display: inline-block" class="bg-green-500 block hover:bg-green-700  text-white font-bold py-2 px-4 rounded-lg" id="generateBar">
+            Generate
         </button>
     </div>
 </div>
