Fixed graph Issue

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="Images/aboutUs/joy.jpg"
+                  src="Images/aboutus/joy.jpg"
                   loading="lazy"
                   width="640"
                   height="805"
@@ -115,7 +115,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="Images/aboutUs/Mazharul.jpg"
+                  src="Images/aboutus/Mazharul.jpg"
                   alt="joy picture"
                   loading="lazy"
                   width="640"
